Fixes the note order. DHH-665

--- a/app/views/shared/fields/_note.html.erb
+++ b/app/views/shared/fields/_note.html.erb
@@ -28,7 +28,7 @@
   end
  
   if data != nil
-    data.each do |n|
+    data.sort.each do |n|
       note = JSON.parse(n)
       note_type = note['type']
       note_label = note['displayLabel']
