--- a/app/views/get_data/get_creator.html.erb
+++ b/app/views/get_data/get_creator.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
+<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_url => false )}';" %>
 
 <script src="/dc/assets/jquery.js" type="text/javascript"></script>
 <script src="/dc/assets/typeahead.bundle.js" type="text/javascript"></script>
