--- a/app/views/get_data/get_name.html.erb
+++ b/app/views/get_data/get_name.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
+<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_url => false )}';" %>
 <script src="/assets/edit.js" type="text/javascript"></script>
 <script src="/assets/jquery.js" type="text/javascript"></script>
 <% if !@relationship.nil? and @relationship == "true"%>
