--- a/app/views/get_data/get_subject.html.erb
+++ b/app/views/get_data/get_subject.html.erb
@@ -1,5 +1,5 @@
 <%#= select_tag "#{@formType}[#{@fieldName}][]", options_for_select(@subjects) , :prompt=>"Select #{@label}" %>	
-<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
+<%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_url => false )}';" %>
 
 <script src="/dc/assets/jquery.js" type="text/javascript"></script>
 <script src="/dc/assets/typeahead.bundle.js" type="text/javascript"></script>
