--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<%= render :partial => 'layouts/head_common' %>
-	<link href="<%= opensearch_catalog_path(:format => 'xml', :only_path => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
+	<link href="<%= opensearch_catalog_path(:format => 'xml', :only_url => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
 	<%= render :partial => 'layouts/googleanalytics' if Rails.env.production? || Rails.env.staging? %>
 
 	<!-- HOME SPECIFIC -->
