--- a/app/views/layouts/ucsdlib.html.erb
+++ b/app/views/layouts/ucsdlib.html.erb
@@ -3,7 +3,7 @@
 	<head>
 		<%= render :partial => 'layouts/head_common' %>
 		<%= render :partial => 'layouts/twitter_card' %>
-		<link href="<%= opensearch_catalog_path(:format => 'xml', :only_path => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
+		<link href="<%= opensearch_catalog_path(:format => 'xml', :only_url => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
 
 	  <script src="//libraries.ucsd.edu/jwplayer/jwplayer.js"></script>
 	  <script src="//libraries.ucsd.edu/jwplayer/key.js"></script>
