--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -91,6 +91,10 @@
       %>
       		<li<%= related_resource_class%>><%= link_to v[0], dams_object_path("#{url.sub( Rails.configuration.id_namespace, '' )}")%></li>
       <%
+         elsif !v[1].nil? && v[1].blank?
+      %>
+        	<li<%= related_resource_class%>><%= v[0] %></li>
+      <%
          else
       %>
         	<li<%= related_resource_class%>><%= link_to v[0], v[1] %></li>
