--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -52,6 +52,7 @@
                   class: "btn btn-block btn-small btn-link" %>
               <% } %>
 		    </ul>
+	        <%= render :partial => 'edit_button' %>
 		  </div>
 		<% end %>
 
