Added CSS fix to remedy topnav submenu bug. (DHH-701)

--- a/app/assets/stylesheets/custom-overrides.css.scss
+++ b/app/assets/stylesheets/custom-overrides.css.scss
@@ -19,6 +19,7 @@ body{padding-top:0;}/* remove blacklight's crazy top padding */
 .alert-error a{color:#8b4d4b !important;}
 .alert-success a{color:#416641 !important;}
 .alert-info a{color:#416d82 !important;}
+.dropdown-backdrop{position:static;}
 
 /*---------------------*/
 /* UCSD LIBRARY CUSTOM */
