Added model and UI display for subject common name. DHH-712

--- a/app/views/dams_objects/_metadata_component.html.erb
+++ b/app/views/dams_objects/_metadata_component.html.erb
@@ -26,6 +26,7 @@
 		[x] name,
 		[x] occupation,
 		[x] personalName,
+		[x] commonName,
 		[x] scientificName,
 		[x] stylePeriod,
 		[x] technique,
@@ -76,6 +77,7 @@
 				<%= render :partial => 'shared/fields/name', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/occupation', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/personal_name', :locals => {:componentIndex => componentIndex} %>
+				<%= render :partial => 'shared/fields/common_name', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/scientific_name', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/style_period', :locals => {:componentIndex => componentIndex} %>
 				<%= render :partial => 'shared/fields/technique', :locals => {:componentIndex => componentIndex} %>
