--- a/app/views/mads_complex_subjects/_metadata.html.erb
+++ b/app/views/mads_complex_subjects/_metadata.html.erb
@@ -2,7 +2,7 @@
 		htmlOpen = "<dt>%s</dt><dd>"
 		htmlClose = "</dd>"
 
-		fields = ['topic', 'personalName','genreForm','iconography','scientificName','technique','builtWorkPlace','geographic','temporal','culturalContext','stylePeriod','conferenceName','function','corporateName','occupation','familyName','name']
+		fields = ['topic', 'personalName','genreForm','iconography','commonName','scientificName','technique','builtWorkPlace','geographic','temporal','culturalContext','stylePeriod','conferenceName','function','corporateName','occupation','familyName','name']
 		fields.each { |field|
 		    for i in 0..20
 		    	htmlOpen = "<dt>%s</dt><dd>"
