--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -43,6 +43,7 @@
 <%= render :partial => 'shared/fields/function' %>
 <%= render :partial => 'shared/fields/iconography' %>
 <%= render :partial => 'shared/fields/occupation' %>
+<%= render :partial => 'shared/fields/common_name' %>
 <%= render :partial => 'shared/fields/scientific_name' %>
 <%= render :partial => 'shared/fields/style_period' %>
 <%= render :partial => 'shared/fields/technique' %>
