--- a/app/views/shared/fields/_resource_type.html.erb
+++ b/app/views/shared/fields/_resource_type.html.erb
@@ -1,70 +1,19 @@
 <%
-   if defined?(componentIndex) # Then we're working with a component
-     prefix = "component_#{componentIndex}_"
-     htmlOpen = '<tr><td>%s</td><td>'
-     htmlClose = '</td></tr>'
-   else # We're working with an object or collection
-     prefix = ''
-     htmlOpen = '<dt>%s</dt><dd>'
-     htmlClose = '</dd>'
-   end
-
-	 modelType = @document["active_fedora_model_ssi"] == 'DamsObject' ? 'object' : 'collection'
-	 fieldPrefix = '<p class="field-title">'.html_safe
-  
-	 fieldPostfix = "</p><p class='field-note'>View formats within this collection</p>".html_safe
-
-   # Handle facet link
-   collection_title = ""
-   collectionData = ""
-   facet_uri_list = {}
-
-   if modelType == "object"
-     if !@document['assembledCollection_json_tesim'].blank?
-       collectionData = @document['assembledCollection_json_tesim']
-     elsif !@document['provenanceCollection_json_tesim'].blank?
-      collectionData = @document['provenanceCollection_json_tesim']
-     elsif !@document['part_json_tesim'].blank?
-      collectionData = @document['part_json_tesim']
-     elsif !@document["#{prefix}collection_json_tesim"].blank?
-        collectionData = @document["#{prefix}collection_json_tesim"]
-     end
-     
-     if !collectionData.blank?
-       collectionData.each do |datum|
-        collection = JSON.parse(datum)
-        collection_title = collection['name']
-       end
-     end
-   else
-     collection_title = @document['title_tesim'].first if !@document['title_tesim'].blank?
-   end
-  
-	 fieldData = @document["#{prefix}resource_type_tesim"]
-
-	 if fieldData != nil
-
-		htmlOpen %= fieldPrefix + 'Format'.pluralize(fieldData.count) + fieldPostfix
-		concat htmlOpen.html_safe
+if @document['resource_type_tesim'] != nil && !defined?(componentIndex)
+  fieldData = @document['resource_type_tesim']
+  collection_title = collection_title(@document) || ''
+  facet_uri_list = {'controller' => 'catalog', :action=> 'index', 'f' => {}}
+  facet_uri_list.merge!({'f'=>{'collection_sim'=>["#{collection_title}"]}}) unless collection_title.blank?
 %>
-
-		<ul class="unstyled glyphicon-list glyphicon-list-tag">
-		  <% fieldData.each do |resource_type| 
-          if collection_title.blank?
-            facet_uri_list.merge!({"f"=>{"object_type_sim"=>["#{resource_type}"]}})
-          else
-            facet_uri_list.merge!({"f"=>{"object_type_sim"=>["#{resource_type}"], "collection_sim"=>["#{collection_title}"]}})
-          end
-          
-          facet_uri_list.merge!({"controller" => "catalog", :action=> "index"})
-        %>
-         
-			    <li><%= link_to resource_type, facet_uri_list %></li>
-				
-		  <% end %>
-		</ul>
-
-		<% concat htmlClose.html_safe %>
-
-	<% end %>
-
+<dt><p class='field-title'><%= 'Format'.pluralize(fieldData.count) %></p>
+  <p class='field-note'>View formats within this collection</p>
+</dt>
+<dd>
+  <ul class='unstyled glyphicon-list glyphicon-list-tag'>
+    <% fieldData.each do |resource_type|
+      facet_uri_list['f'].merge!({'object_type_sim'=>["#{resource_type}"]}) %>
+      <li><%= link_to resource_type, facet_uri_list %></li>
+    <% end %>
+  </ul>
+</dd>
+<% end %>
